1、更新spring boot版本 2、jdk最低支持 17 3、修复pg数据库漏洞